[package]
name = "undercover"
version = "1.1.0"
authors = ["Trebusz"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
csv = "1.3"
include_dir = "0.7"
base64 = "0.22"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
